# DouDou

./: .gitignore  README.md
device/remarkable/: README.md  riddle-launcher.qmd  xovi-tripletap-config
device/riddle/: Cargo.toml  README.md  build-takeover.sh  build.rs  oracle.env.example  persona.txt
docs/: architecture.md  roadmap.md
server/: .gitignore  README.md  pyproject.toml  run.sh
server/app/: config.py  db.py  main.py  models.py  seed_shapes.py
server/app/engine/: ambient.py  art.py  cards.py  errors.py  lesson.py  prompt.py  stt.py  transcript.py  tts.py  turn.py  upstream.py
server/app/routers/: admin_curricula.py  admin_profiles.py  admin_providers.py  admin_test.py  admin_turns.py  admin_voice.py  files.py  openai_compat.py  phone.py  turn.py
server/scripts/: gen_art.py
server/tests/: conftest.py  test_admin_curricula.py  test_admin_profiles.py  test_admin_providers.py  test_admin_test_and_turns.py  test_art.py  test_cards_engine.py  test_curriculum_models.py  test_db.py  test_lesson_engine.py  test_lesson_turn.py  test_openai_compat.py  test_phone.py  test_phone_lesson.py  test_prompt.py  test_seed_shapes.py  test_transcript.py  test_turn_endpoint.py  test_turn_engine.py  test_upstream.py  test_voice.py
server/tests/fixtures/: riddle_body.json
server/web/: index.html  package-lock.json  package.json  vite.config.ts
server/web/src/: App.tsx  api.ts  main.tsx
server/web/src/components/: CandidateInput.tsx
server/web/src/pages/: Curricula.tsx  Phone.tsx  Profiles.tsx  Providers.tsx  TestBench.tsx  Turns.tsx  VoiceSettings.tsx
(+36 files in other folders)
